# teleia

./: .dir-locals.el  .gitmodules  Cargo.toml  flake.nix  index.css  index.html  rust-toolchain.toml
crates/teleia/: Cargo.toml  build.rs
crates/teleia/src/: audio.rs  context.rs  fig.rs  font.rs  framebuffer.rs  helpers.js  lib.rs  mesh.rs  net.rs  postprocessing.rs  renderer.rs  save.rs  scene.rs  script.rs  shader.rs  shadow.rs  state.rs  texture.rs  ui.rs  utils.rs
crates/teleia/src/assets/shaders/bitmap/: frag.glsl  vert.glsl
crates/teleia/src/assets/shaders/common/: frag.glsl  postprocessing_vert.glsl
crates/teleia/src/assets/shaders/flat/: frag.glsl
crates/teleia/src/assets/shaders/scene/: frag.glsl
crates/teleia/src/assets/shaders/uber/: frag.glsl  vert.glsl
crates/teleia/src/js/: module.js
crates/teleia/src/level2d/: tiled.rs
crates/teleia/src/net/: fig.rs  ws.rs
crates/teleia/src/net/client/: wasm.rs
crates/teleia/src/net/ws/: client.rs  server.rs
crates/teleia/src/net/ws/client/: native.rs  wasm.rs
crates/teleia/src/script/: bencode.rs  nrepl.rs
crates/teleia_macros/: Cargo.toml
crates/teleia_macros/src/: lib.rs
examples/: fox.rs
nix/: flake.nix
src/: audio.rs  context.rs  font.rs  framebuffer.rs  helpers.js  lib.rs  main.rs  mesh.rs  module.rs  request.rs  save.rs  scene.rs  shader.rs  state.rs  texture.rs  ui.rs  utils.rs
src/assets/shaders/bitmap/: frag.glsl  vert.glsl
src/assets/shaders/common/: frag.glsl  vert.glsl
src/assets/shaders/scale/: frag.glsl
src/assets/shaders/scene/: vert.glsl
src/assets/shaders/test/: frag.glsl
src/assets/shaders/text/: frag.glsl  vert.glsl
src/assets/shaders/tiled/: frag.glsl  vert.glsl
src/assets/shaders/truetype/: frag.glsl
