[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["LLLL Colonq <llll@colonq.computer>"]

[workspace.metadata.crane]
name = "teleia"

[profile.dev.package."*"]
opt-level = 2

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"