[package]
name = "teleia"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strum = { version = "*", features = ["derive"] } # utility macros for enums
glow = { version = "=0.13.1", features = [] } # rendering
tobj = "*" # loader for .obj meshes loader
gltf = { git = "https://github.com/lcolonq/gltf", features = ["extras", "import", "names", "utils"] } # loader for .gltf scenes
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] } # texture loader
cosmic-text = { version = "*", default-features = false, features = ["std", "swash"] }  # advanced text rendering
glam = "0.29" # linear algebra
log = "*" # logging
rand = { version = "=0.8.5", features = ["small_rng"] } # rng
serde = { version = "*", features = ["derive"] } # serialization
serde_json = "*" # serialize JSON
bincode = { version = "*", features = ["serde"] } # binary serialization
enum-map = "*" # fast maps with enums as keys
bimap = "*" # bijective maps
# reqwest = "*" # http requests
bytes = "*" # bytes for http responses
bitflags = "*" # bitwise flags
simple-eyre = { version = "*", default-features = false } # error reporting and formatting
rapier3d = "*" # rigid-body physics
parry3d = "*" # collision detection
nalgebra = {version = "0.33.2", features = ["convert-glam029"]} # linear algebra library for rapier3d
byteorder = "*" # read numbers in particular endianness
base64 = "0.22.1" # encode/decode base64

[target.'cfg(target_arch = "wasm32")'.dependencies]
winit = {version = "=0.29.15", features = ["serde"]} # windowing and events
getrandom = {version = "*", features = ["js"]} # rng in the browser
console_log = "*" # log to browser console
console_error_panic_hook = "*" # log to browser console on panic
tracing-wasm = "*" # trace performance in browser
wasm-bindgen = "=0.2.100" # interface with javascript
wasm-bindgen-futures = "*" # interface with async javascript
js-sys = "*" # browser APIs to interact with JS runtime (e.g. run WASM)
web-sys = { version = "*", features = ["Document", "Window", "Element", "HtmlCanvasElement", "WebGl2RenderingContext", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Performance", "PerformanceTiming", "AudioContext", "AudioNode", "GainNode", "AudioParam", "AudioDestinationNode", "AudioBuffer", "AudioBufferSourceNode", "BinaryType", "Blob", "CloseEvent", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent", "WebSocket", "Storage"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "*" # configurable logging to stdout
glfw = { git = "https://github.com/lcolonq/glfw-rs", features = ["serde"] } # window management
kira = { version = "=0.9.6", default-features = false, features = ["cpal", "ogg", "wav"] } # audio
directories = { git = "https://github.com/lcolonq/directories-rs" } # standard system directories
polling = "*" # interface to epoll
tungstenite = { version = "*", features = ["native-tls"] } # websockets